OpenAPI docs edited
